Lab1/1_cholesky/out_cholesky_175429.err
cholesky.c: In function ‘cholesky_openmp’:
cholesky.c:46:13: error: initializer expression refers to iteration variable ‘i’
     #pragma omp parallel for collapse(2)
             ^~~
cholesky.c:80:9: error: collapsed loops not perfectly nested before ‘U’
         U[i][i] = sqrt(A[i][i]-tmp);
         ^
cholesky.c:107:22: error: invalid controlling predicate
             for(i=k; i<k+strip_size && i<n; i++){
                      ^
cholesky.c:108:26: error: invalid controlling predicate
                 for(j=l; j<l+strip_size && j<n; j++){
                          ^
cholesky.c:127:26: error: invalid controlling predicate
                 for(i=k; i<k+tilesize && i<n; i++){
                          ^
cholesky.c:128:30: error: invalid controlling predicate
                     for(j=l; j<l+tilesize && j<n; j++){
                              ^
cholesky.c:129:34: error: invalid controlling predicate
                         for(h=m; h<m+tilesize && h<n; h++) B[i][j] += L[i][k] * U[k][j];
                                  ^
cholesky.c:146:22: error: invalid controlling predicate
             for(i=k; i<k+strip_size && i<n; i++){
                      ^
cholesky.c:147:26: error: invalid controlling predicate
                 for(j=l; j<l+strip_size && j<n; j++){
                          ^
make: *** [Makefile:7: all] Error 1
